[package]
name = "kaist-seoul-meals"
version = "0.1.0"
edition = "2021"

[dependencies]
scraper = "0.20.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
anyhow = "1.0"
serde_json = "1.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.0", features = ["json"] }
